Fix text alignment.

--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,9 @@ h1 {
 
 .display p {
     flex: 1;
+    text-align: right;
+    align-self: flex-end;
+    padding-right: 4px;
     font-size: 36px;
 }
 
